--- a/gradle.properties
+++ b/gradle.properties
@@ -24,5 +24,5 @@ mod_name=Beyond The Pond
 mod_license=MIT
 mod_version=1.0.0
 mod_group_id=net.kawadw
-mod_authors=Kawa DW
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_authors=kawadw, Seentro, Magne L, Deliwitz
+mod_description=A mod that adds many marine animals to your world to enhance your local rivers and oceans, bringing them Beyond The Pond!!!
